[gd_scene load_steps=4 format=3 uid="uid://23j7p85mn0td"]

[ext_resource type="Script" path="res://tests/drag and drop/placeable_entity.gd" id="1_aec0m"]
[ext_resource type="Texture2D" uid="uid://dl270wpr8inuw" path="res://icon.svg" id="1_xt87n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvj08"]
size = Vector2(32, 32)

[node name="PlaceableEntity" type="Node2D"]
script = ExtResource("1_aec0m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xt87n")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wvj08")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
